2003-09-19  Andrew Cagney  <cagney@redhat.com>

	* sparcnbsd-nat.c (getregs_supplies): Rename NPC_REGNUM to
	DEPRECATED_NPC_REGNUM.
	* sparc64nbsd-nat.c (getregs_supplies): Ditto.

2003-09-19  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (mappings): Remove HAVE_SSE conditional.

2003-09-19  Jim Blandy  <jimb@redhat.com>

	* macrotab.c (macro_include): Use the correct comparison to find
	the appropriate place for this inclusion in the list.

2003-09-19  Andrew Cagney  <cagney@redhat.com>

	* config/pa/nm-hppah.h (NEED_TEXT_START_END): Delete.
	(DEPRECATED_HPUX_TEXT_END): Define.
	(deprecated_hpux_text_end): Declare.
	(struct target_ops): Declare opaque.
	* hppah-nat.c (text_end): Make static.
	(deprecated_hpux_text_end): New function.
	* exec.c (text_end): Delete global variable.
	(NEED_TEXT_START_END): Do not define.
	(exec_file_attach): Replace code computing "text_end" code with
	call to DEPRECATED_HPUX_TEXT_END.

2003-09-19  Andrew Cagney  <cagney@redhat.com>

	* utils.c (align_up, align_down): New functions.
	* defs.h (align_up, align_down): Declare.
	* ppc-sysv-tdep.c (align_up, align_down): Delete functions.
	* s390-tdep.c: Replace "round_up" and "round_down" with "align_up"
	and "align_down".
	(round_up, round_down): Delete functions.
	* mips-tdep.c: Replace ROUND_UP and ROUND_DOWN with "align_up" and
	"align_down".
	(ROUND_DOWN, ROUND_UP): Delete macros.
	(mips_dump_tdep): Do not print "ROUND_UP" or "ROUND_DOWN".
	* h8300-tdep.c: Replace "round_up" and "round_down" with
	"align_up" and "align_down".
	(round_up, round_down): Delete macros.
	* frv-tdep.c: Replace ROUND_UP and ROUND_DOWN with "align_up" and
	"align_down".
	(ROUND_UP, ROUND_DOWN): Delete macros.

2003-09-18  J. Brobecker  <brobecker@gnat.com>

	* hppa-hpux-tdep.c (_initialize_hppa_hpux_tdep): Remove a
	hard-coded constant. Use the proper machine name instead.

2003-09-17  Andrew Cagney  <cagney@redhat.com>

	* sparc-tdep.c (legacy_register_name): Delete function.